Placeholder Images Added (Fixed issue with them not Auto aligning

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body{
 
 .title-text-space{
     background-color: darkslategray;
-    height: 75px;
+    margin: 20px;
 }
 
 .title-text{
